# stock-predictor

./: README.md
src/stock_predictor/: cli.py  data.py  features.py
stock_predictor_starter/: pyproject.toml  requirements.txt
stock_predictor_starter/app/: streamlit_app.py
stock_predictor_starter/examples/: colab_quickstart.py
stock_predictor_starter/src/stock_predictor/: __init__.py  predict.py  training.py
stock_predictor_starter/tests/: test_smoke.py
