
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-predictor"
version = "0.1.0"
description = "Educational AI tool to predict future stock close prices"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
keywords = ["stocks", "time-series", "forecasting", "machine-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Education",
]

[project.dependencies]
yfinance = ">=0.2.50"
pandas = ">=2.2.2"
numpy = ">=1.26"
scikit-learn = ">=1.5"
joblib = ">=1.4"
matplotlib = ">=3.8"

[project.optional-dependencies]
app = ["streamlit>=1.37"]

[project.scripts]
predictor = "stock_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
